--- a/core/includes/assets/css/frontend.css
+++ b/core/includes/assets/css/frontend.css
@@ -14,10 +14,22 @@
   float: left;
 }
 
-.wp-block-depay-payments-block-settings {
+.wp-block-depay-payments-block-settings-amount {
   position: absolute;
   top: -4px;
   right: -4px;
+  background: black;
+  box-shadow: 0 0 8px rgba(0,0,0,0.2);
+  border-radius: 5px;
+  padding: 4px;
+  color: white;
+  font-size: 12px;
+}
+
+.wp-block-depay-payments-block-settings-label {
+  position: absolute;
+  top: -4px;
+  left: -4px;
   background: black;
   box-shadow: 0 0 8px rgba(0,0,0,0.2);
   border-radius: 5px;
